@@ -23,6 +23,10 @@
     issues in (for example) Kaboom, where there was a huge 'deadzone'
     when moving to the left.
 
+  * Fixed bug in ROM launcher; selecting 'Options -> Game Properties' after
+    loading a ROM would always point to the last opened ROM, not to the one
+    currently selected.
+
   * Added more C++11 updates all over the codebase, and ran Stella
     through Coverity for the first time.  I'm proud to say that Stella
     now has a 0.00 defect rate!
